--- a/debian.master/control.stub.in
+++ b/debian.master/control.stub.in
@@ -102,7 +102,7 @@ Replaces: linux-oem-5.6-tools-common
 Description: Linux kernel version specific tools for version PKGVER
  This package provides the architecture independent parts for kernel
  version locked tools (such as perf and x86_energy_perf_policy) for
- version PGKVER.
+ version PKGVER.
 
 Package: SRCPKGNAME-tools-PKGVER-ABINUM
 Build-Profiles: <!stage1>
@@ -126,7 +126,7 @@ Priority: optional
 Depends: ${misc:Depends}
 Description: Linux kernel version specific cloud tools for version PKGVER
  This package provides the architecture independent parts for kernel
- version locked tools for cloud tools for version PGKVER.
+ version locked tools for cloud tools for version PKGVER.
 
 Package: SRCPKGNAME-cloud-tools-PKGVER-ABINUM
 Build-Profiles: <!stage1>
